# django-db-translate

./: .gitignore  README.rst  pyproject.toml
django_db_translate/: apps.py  middleware.py  models.py
django_db_translate/admin/: admin.py  forms.py  views.py
django_db_translate/management/commands/: makemessages.py
django_db_translate/migrations/: 0001_initial.py
django_db_translate/templates/db_translate/: locale.html
django_db_translate/translations/: __init__.py  loader.py  query.py
